# BookingService

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  main.cpp
.github/workflows/: unit_tests.yml  unit_tests_windows.yml
src/: BookingService.cpp  BookingService.h  CLI.cpp  CLI.h  CMakeLists.txt  Database.cpp  Database.h  WebService.cpp  main.cpp
test/: CMakeLists.txt  database_tests.cpp  main.cpp
